--- a/tom/tom.csproj
+++ b/tom/tom.csproj
@@ -58,12 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\LocalAssemblyInfo.cs" />
+    <Compile Include="Properties\LocalAssemblyInfo.g.cs" />
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\VersionInfo.cs">
-      <Link>Properties\VersionInfo.cs</Link>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -71,10 +68,12 @@
     <None Include="..\unlimitedinf.ico">
       <Link>Properties\unlimitedinf.ico</Link>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <PropertyGroup>
-    <PreBuildEvent>powershell "$(SolutionDir)VersionInfo.ps1 $(ProjectDir) $(AssemblyName)"</PreBuildEvent>
+    <PreBuildEvent>powershell "$(SolutionDir)LocalAssemblyInfo.ps1" "$(MSBuildProjectDirectory)" $(AssemblyName)</PreBuildEvent>
   </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NuProj.Common.0.11.30\build\dotnet\NuProj.Common.targets" Condition="Exists('..\packages\NuProj.Common.0.11.30\build\dotnet\NuProj.Common.targets')" />
