--- a/tom.hello-world/tom.hello-world.csproj
+++ b/tom.hello-world/tom.hello-world.csproj
@@ -1,23 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\NuProj.0.11.30\build\NuProj.props" Condition="Exists('..\..\packages\NuProj.0.11.30\build\NuProj.props')" />
+  <Import Project="..\packages\NuProj.0.11.30\build\NuProj.props" Condition="Exists('..\packages\NuProj.0.11.30\build\NuProj.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39A9C3A7-52A9-4D55-9557-91184C6CE067}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Unlimitedinf.Tom</RootNamespace>
-    <AssemblyName>tom</AssemblyName>
+    <ProjectGuid>{1D2158BC-CC3C-4F06-BE34-90BB8600AE2A}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Unlimitedinf.Tom.HelloWorld</RootNamespace>
+    <AssemblyName>hello-world</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,10 +25,9 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\noglob.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\tom.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\hello-world.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -39,15 +36,12 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\noglob.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Release\tom.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\hello-world.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>..\unlimitedinf.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,13 +50,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unlimitedinf.Tools, Version=3.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unlimitedinf.Tools.3.2.2\lib\net462\Unlimitedinf.Tools.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="ITom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\LocalAssemblyInfo.g.cs" />
     <Compile Include="..\CommonAssemblyInfo.cs">
@@ -70,13 +59,16 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="..\unlimitedinf.ico">
       <Link>Properties\unlimitedinf.ico</Link>
     </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tom\tom.csproj">
+      <Project>{39a9c3a7-52a9-4d55-9557-91184c6ce067}</Project>
+      <Name>tom</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <PreBuildEvent>powershell "$(SolutionDir)LocalAssemblyInfo.ps1" "$(MSBuildProjectDirectory)" $(AssemblyName)</PreBuildEvent>
