--- a/tom.hash-rename/tom.hash-rename.csproj
+++ b/tom.hash-rename/tom.hash-rename.csproj
@@ -2,10 +2,10 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <ProjectGuid>{5E7D331B-4517-4450-8FA2-2E25014C07D9}</ProjectGuid>
+    <ProjectGuid>{862553DA-6493-4ED5-8826-5D921E907C1C}</ProjectGuid>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Unlimitedinf.Tom.Hash</RootNamespace>
-    <AssemblyName>hash</AssemblyName>
+    <RootNamespace>Unlimitedinf.Tom.HashRename</RootNamespace>
+    <AssemblyName>hash-rename</AssemblyName>
   </PropertyGroup>
   <Import Project="..\Common.props" />
   <ItemGroup>
@@ -22,11 +22,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Program.cs" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Program.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Common.targets" />
