--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,13 @@ steps:
     command: restore
     projects: src/tom.sln
 
+- task: DotNetCoreCLI@2
+  displayName: Pack
+  inputs:
+    command: pack
+    projects: src/tom/tom.csproj
+    arguments: '--no-restore --configuration Debug --output $(Build.ArtifactStagingDirectory)/output'
+
 - task: PublishBuildArtifacts@1
   displayName: Publish build artifacts
   inputs:
