pull in hashing components from Unlimitedinf.Tools

--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -10,4 +10,9 @@
     <ToolCommandName>tom</ToolCommandName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1" />
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
