--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,6 +9,7 @@
   <!-- Shared properties for all projects. -->
   <PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <DebugSymbols>true</DebugSymbols>
     <LangVersion>9.0</LangVersion>
     <DebugType>full</DebugType>
@@ -28,8 +29,7 @@
   <!-- Packaging Metadata -->
   <PropertyGroup>
     <Authors>UnlimitedInf</Authors>
-    <Company>UnlimitedInf</Company>
-    <Product>tom.exe</Product>
+	<Description>My primary exe helper that uses all the various tools I've written. Don't expect stability.</Description>
     <Copyright>Copyright © UnlimitedInf (Tom Postler) 2022</Copyright>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <RepositoryUrl>https://github.com/tompostler/tom</RepositoryUrl>
