--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,11 +26,18 @@ steps:
     projects: src/tom.sln
 
 - task: DotNetCoreCLI@2
-  displayName: Build and pack to staging directory
+  displayName: Build project
+  inputs:
+    command: build
+    projects: src/tom/tom.csproj
+    arguments: --configuration Debug --no-restore --runtime win-x64 --self-contained true
+
+- task: DotNetCoreCLI@2
+  displayName: Pack to staging directory
   inputs:
     command: custom
     custom: pack
-    arguments: src/tom/tom.csproj --configuration Debug --no-restore --output $(Build.ArtifactStagingDirectory) --no-self-contained
+    arguments: src/tom/tom.csproj --configuration Debug --no-build --no-restore --output $(Build.ArtifactStagingDirectory) --runtime win-x64
 
 - task: PublishBuildArtifacts@1
   displayName: Publish build artifacts
