--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   inputs:
     command: build
     projects: src/tom/tom.csproj
-    arguments: --configuration Debug --no-restore --runtime win-x64 --self-contained false
+    arguments: --configuration Debug --no-restore --runtime win-x64 --no-self-contained
 
 - task: DotNetCoreCLI@2
   displayName: Pack to staging directory
