--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -1,17 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>tom</AssemblyName>
-    <PackageId>Unlimitedinf.Tom</PackageId>
     <RootNamespace>Unlimitedinf.Tom</RootNamespace>
+	<AssemblyName>Unlimitedinf.Tom</AssemblyName>
     <OutputType>Exe</OutputType>
 
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>tom</ToolCommandName>
+
+    <Description>Various tools and utilities that I've needed or found useful.</Description>
+    <DocumentationFile>$(BaseOutputPath)\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta3.22114.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
