--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ws\ws.csproj" />
+  </ItemGroup>
+
 </Project>
