move utilities to util package

--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\util\util.csproj" />
     <ProjectReference Include="..\ws\ws.csproj" />
   </ItemGroup>
 
