single self-contained file

--- a/src/tom.exe/tom.exe.csproj
+++ b/src/tom.exe/tom.exe.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <RootNamespace>Unlimitedinf.Tom.Exe</RootNamespace>
     <AssemblyName>Unlimitedinf.Tom.Exe</AssemblyName>
-    <OutputType>Exe</OutputType>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
     <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishTrimmed>true</PublishTrimmed>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
