--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,20 @@ steps:
     projects: src/tom.sln
     arguments: '--no-restore --configuration Debug --property:PackageOutputPath=$(Build.ArtifactStagingDirectory)'
 
+- task: DotNetCoreCLI@2
+  displayName: Publish self-contained (linux-x64)
+  inputs:
+    command: publish
+    projects: src/tom.exe/tom.exe.csproj
+    arguments: '--no-restore --configuration Debug --runtime linux-x64'
+
+- task: DotNetCoreCLI@2
+  displayName: Publish self-contained (win-x64)
+  inputs:
+    command: publish
+    projects: src/tom.exe/tom.exe.csproj
+    arguments: '--no-restore --configuration Debug --runtime win-x64'
+
 - task: PublishBuildArtifacts@1
   displayName: Publish build artifacts
   inputs:
