--- a/src/tom.exe/tom.exe.csproj
+++ b/src/tom.exe/tom.exe.csproj
@@ -18,11 +18,14 @@
     <Compile Include="..\tom\Commands\ImageDuplicateBlockhashCommand.cs" Link="Commands\ImageDuplicateBlockhashCommand.cs" />
     <Compile Include="..\tom\Commands\RandomCommand.cs" Link="Commands\RandomCommand.cs" />
     <Compile Include="..\tom\Commands\WebSocketClientCommand.cs" Link="Commands\WebSocketClientCommand.cs" />
+    <Compile Include="..\tom\Commands\ZzTestSpectreConsoleProgressLoggerCommand.cs" Link="Commands\ZzTestSpectreConsoleProgressLoggerCommand.cs" />
+    <Compile Include="..\tom\SpectreConsoleFileTransferProgressLogger.cs" Link="SpectreConsoleFileTransferProgressLogger.cs" />
     <Compile Include="..\tom\VersionProvider.cs" Link="VersionProvider.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
+    <PackageReference Include="Spectre.Console" Version="0.45.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
