--- a/src/tom.exe/tom.exe.csproj
+++ b/src/tom.exe/tom.exe.csproj
@@ -26,12 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microcharts" Version="0.9.5.9" />
     <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\subs\Microcharts\Sources\Microcharts\Microcharts.csproj" />
     <ProjectReference Include="..\util\util.csproj" />
     <ProjectReference Include="..\ws.contracts\ws.contracts.csproj" />
   </ItemGroup>
