--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -14,11 +14,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microcharts" Version="0.9.5.9" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\subs\Microcharts\Sources\Microcharts\Microcharts.csproj" />
     <ProjectReference Include="..\util\util.csproj" />
     <ProjectReference Include="..\ws\ws.csproj" />
   </ItemGroup>
