--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,8 @@ pool:
   vmImage: windows-2022
 
 steps:
+- checkout: self
+  submodules: true
 
 - task: gitversion/setup@0
   displayName: Install GitVersion
