--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,3 +73,28 @@ steps:
     pathToPublish: $(Build.ArtifactStagingDirectory)
     artifactName: drop
     publishLocation: Container
+
+- powershell: |
+    # .DESCRIPTION
+    # This is needed since VSTS "Tag build on success" is tagging ALL the builds. This, as a build task, can be conditionalized to only run on the master branches.
+    # In order for this to work for a build/release phase, you MUST check the box to "Allow scripts to access OAuth token".
+    # This script will succeed on Unauthorized, Duplicate Tag, and successful scenarios. This is by design.
+    $tagUrl = "{0}{1}/_apis/git/repositories/{2}/refs?api-version=1.0" -f $env:SYSTEM_TEAMFOUNDATIONCOLLECTIONURI, $env:SYSTEM_TEAMPROJECT, $env:BUILD_REPOSITORY_NAME
+    Write-Host "URL: $tagUrl"
+    $newTag = @"
+    [
+      {
+        "name": "refs/tags/$env:BUILD_BUILDNUMBER",
+        "oldObjectId": "0000000000000000000000000000000000000000",
+        "newObjectId": "$env:BUILD_SOURCEVERSION"
+      }
+    ]
+    "@;
+    $auth = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes((":{0}" -f $env:SYSTEM_ACCESSTOKEN)))
+    $result = Invoke-RestMethod $tagUrl -Method POST -Body $newTag -ContentType "application/json" -Headers @{ Authorization = ("Basic {0}" -f $auth) }
+    $result | ConvertTo-Json -Depth 100 | Out-Host
+  condition: and(succeeded(), eq(variables['Build.Reason'], 'IndividualCI'))
+  displayName: Tag source with build number
+  env:
+    # Have to explicitly map through to grant access
+    SYSTEM_ACCESSTOKEN: $(System.AccessToken)
