--- a/src/tom.exe/tom.exe.csproj
+++ b/src/tom.exe/tom.exe.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Compile Include="..\tom\Commands\ChartSystemStatsCommand.cs" Link="Commands\ChartSystemStatsCommand.cs" />
+    <Compile Include="..\tom\Commands\ConvertCommand.cs" Link="Commands\ConvertCommand.cs" />
     <Compile Include="..\tom\Commands\HashCommand.cs" Link="Commands\HashCommand.cs" />
     <Compile Include="..\tom\Commands\HashRenameCommand.cs" Link="Commands\HashRenameCommand.cs" />
     <Compile Include="..\tom\Commands\ImageDimensionFilterCommand.cs" Link="Commands\ImageDimensionFilterCommand.cs" />
