--- a/src/tom/tom.csproj
+++ b/src/tom/tom.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(TargetFrameworks);net6.0</TargetFrameworks>
+    <TargetFrameworks>$(TargetFrameworks)</TargetFrameworks>
 
     <RootNamespace>Unlimitedinf.Tom</RootNamespace>
     <AssemblyName>Unlimitedinf.Tom</AssemblyName>
@@ -22,16 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\subs\Microcharts\Sources\Microcharts\Microcharts.csproj" />
     <ProjectReference Include="..\util\util.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' != 'net6.0' ">
     <ProjectReference Include="..\ws\ws.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <Compile Remove="**\WebSocket*Command.cs" />
-  </ItemGroup>
-  <PropertyGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
-    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
-  </PropertyGroup>
 
 </Project>
