packages.props, slnx, _repo migrations

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project>
 
-  <!-- Ensures that if this file changes, projects will be rebuilt. -->
   <PropertyGroup>
+    <!-- Ensures that if this file changes, projects will be rebuilt. -->
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
   </PropertyGroup>
 
@@ -16,11 +15,15 @@
     <DebugType>full</DebugType>
   </PropertyGroup>
 
+  <!-- Define this property for other build steps/tasks. -->
+  <PropertyGroup>
+    <RepoRoot>$(MSBuildThisFileDirectory)\..</RepoRoot>
+  </PropertyGroup>
+
   <!-- Populate version variables based on NerdBank.GitVersion if available. -->
   <ItemGroup>
     <PackageReference Include="Nerdbank.GitVersioning">
       <PrivateAssets>all</PrivateAssets>
-      <Version>3.9.*</Version>
     </PackageReference>
   </ItemGroup>
 
