--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -7,14 +7,14 @@
 
   <ItemGroup>
     <!-- dotnet -->
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
-    <PackageVersion Include="System.Drawing.Common" Version="10.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.2" />
+    <PackageVersion Include="System.Drawing.Common" Version="10.0.2" />
     
     <!-- Tests -->
     <PackageVersion Include="MSTest" Version="4.0.2" />
     
     <!-- Everything else -->
     <PackageVersion Include="Nerdbank.GitVersioning" Version="3.9.50" />
-    <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageVersion Include="System.CommandLine" Version="2.0.2" />
   </ItemGroup>
 </Project>
